# open-politics

./: README.md  requirements.txt
brasil/: fontes.txt
brasil/2025/pec/pec-10-2025/: PEC-10-2025.txt
brasil/2025/pec/pec-18-2025/: PEC-18-2025.txt
brasil/2025/pec/pec-9-2025/: PEC-9-2025.txt
brasil/ai/: ai.py
brasil/ai/prompt/: general.py
open_politics/: README.md  pyproject.toml  report.md
open_politics/src/open_politics/: crew.py  main.py
