[project]
name = "open_politics"
version = "0.1.0"
description = "open-politics using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
open_politics = "open_politics.main:run"
run_crew = "open_politics.main:run"
train = "open_politics.main:train"
replay = "open_politics.main:replay"
test = "open_politics.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
